fix movable maximized behaviour, allow maximizing clients with limited max size

BUG: 279529
REVIEW: 102237
(cherry picked from commit 3700951ab33933c707da2e50b0561bf3ee9812c4)